# nicky-ticket-taylor-copy

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  start-cloudflare-tunnel.bat  start-cloudflare-tunnel.sh  start-local-auth0-compat.bat  start-local-auth0-compat.sh  tail-microservice-logs.bat  tail-microservice-logs.sh  vercel.json  write_translations.py
.claude/: launch.json
.claude/skills/admin-ui-developer/: SKILL.md
.claude/skills/admin-ui-developer/references/: components.md  i18n.md
.claude/skills/fastapi-developer/: SKILL.md
.claude/skills/fastapi-developer/references/: auth.md  database.md  deployment.md  integrations.md  migrations.md  modules.md  testing.md
.github/workflows/: deploy-production.yml
app/: __init__.py  admin_auth.py  admin_ui.py  config.py  db.py  db_models.py  extractors.py  i18n.py  job_runner.py  jobs.py  main.py  nicky.py  security.py  service.py  tenants.py  ticket_tailor.py
app/translations/: ar.json  da.json  el.json  en.json  es.json  fr.json  he.json  it.json  nl.json  pt-br.json  ru.json  zh-Hans.json
docs/: azure-architecture.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_tenant_nicky_webhook_id.py  0003_users_table.py
scripts/: upsert_tenant.py
tests/: test_admin_auth.py  test_admin_ui.py  test_extractors.py  test_jobs.py  test_nicky.py  test_security.py  test_service.py
